--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
         container_name: shiftpuzzle
         build: ./app
         ports:
-            - "80"
-            #- "3000:3000"
+            - "3001:3001"
+        env_file: ${ENV_FILE_PATH}
         command: ["node", "index.js"]
