--- a/envs/.env.template
+++ b/envs/.env.template
@@ -1,38 +1,8 @@
-SW_VERSION=X                                        #Serviceworker-Version. Kann X bleiben, weil diese über environment in der docker-compose.yml gesetzt wird.
+EXPRESS_PORT=3020                                               #port express is listening, must be same like in CONTAINER PORTS
 
-SERVER_URL=https://app.landshut.de                  #Vollständige URL der laufenden App
-PORT=3001
-
-STARTUP_DELAY=10000                                 #Verzögert die DB connection (und den app start) um bei restarts dem db container einen vorsprung zu geben.
-RESTART_CONTAINER=always                            #always: startet neu bei Absturz oder host restart; no: kein Restart
-
-APP_NAME=Bürger-App Landshut                        #App-Name für Manifest
-APP_SHORT_NAME=Bürger-App LA                        #App-Short-Name für das Manifest
-
-GOOGLE_SITE_VERFICATION_ID=id-from-google           #Google Search Console Id für eine neue Page zwecks SEO
-
-CONTAINER_NAME=serviceapp_template                  #Name des laufenden Docker-Containers. Wird gesetzt um mehrere Instanzen am selben Deamon laufen lassen zu können. Benannt nach dem "Zweck".
-CONTAINER_PORTS="3001-3002:3001-3002"               #Für die ports-Variable in docker-compose.yml
-
-ENV_FILE_PATH=./envs/.env.template                  #Pfad zur richtigen .env-File. Wird auch per docker-compose up übergeben, muss aber in docker-compose gesetzt sein, um INNERHALB des Containers zu gelten.
-START_COMMAND=node --inspect=0.0.0.0:3002 ./app/backendscripts/expressapp.js
-
-VOLUME_SRC=C:\Users\Anwender\Documents\projects\serviceapp-landshut-de\app
-
-DB_SCHEMA_NAME=changeThisToActuelSchemaName         #Name der anzusteuernden Datenbank (Schema), je nach Zweck
-APP_USER_DB=changeThisToActualUser                  #DB-User für die serviceapp
-APP_PASSWORD_DB=changeThisToActualPassword          #Passwort für den DB-User
-EXTERNAL_DB_IP=changeThisToActualIp                 #IP der Host-Maschine. Für DB-Zugang von lokal laufender App notwendig. (Port 3306 ist an Host exposed)
-DB_CONTAINER_IP=changeThisToActualDBIp              #Docker-interne DB-IP. Für DB-Zugang von anderem Container aus (Zwecke "test" und "live") KANN CONTAINER NAME SEIN, SOFERN BEIDE IN SELBER CUSTOM BRIDGE NETWORK!!
-
-VIRTUAL_HOST=app.landshut.de                        #Variable für NGINX
-LETSENCRYPT_HOST=app.landshut.de                    #Variable für NGINX Acme
-
-VAPID_PUBLIC_KEY=xyz                                #Security Keys für asynchrone Verschlüsselung für Push API
-VAPID_PRIVATE_KEY=abc                               #Security Keys für asynchrone Verschlüsselung für Push API
-
-EMAIL_SMTP_HOST=smtp.xxxx.de                        #Credentials
-EMAIL_SMTP_PORT=465                                 #for    
-EMAIL_SENDER_ADRESS=andi@example.de                 #Mail-
-EMAIL_SENDER_NAME=ThaApp                            #Server-
-EMAIL_PW=wtf42069                                   #Connection
+ENV_FILE_PATH=./envs/.env.local                                 #own path of .env.file (README)
+CONTAINER_NAME=shiftpuzzle_local                                #the container name, obviously
+RESTART_CONTAINER="no"                                          #restart var, can be always
+CONTAINER_PORTS="3020-3021:3020-3021"                           #specifies exposed ports, in this case 3021 if for debug (launch.json)
+START_COMMAND=node --inspect=0.0.0.0:3021 ./app/index.js        #start command for docker-compose.yaml
+VOLUME_SRC=/path/to/project/app                                 #to app folder in project
