added some readme explaination + removed deprecated version on docker-compose.yml

--- a/envs/.env.template
+++ b/envs/.env.template
@@ -3,6 +3,6 @@ EXPRESS_PORT=3020                                               #port express is
 ENV_FILE_PATH=./envs/.env.local                                 #own path of .env.file (README)
 CONTAINER_NAME=shiftpuzzle_local                                #the container name, obviously
 RESTART_CONTAINER="no"                                          #restart var, can be always
-CONTAINER_PORTS="3020-3021:3020-3021"                           #specifies exposed ports, in this case 3021 if for debug (launch.json)
-START_COMMAND=node --inspect=0.0.0.0:3021 ./app/index.js        #start command for docker-compose.yaml
+CONTAINER_PORTS="3020-3021:3020-3021"                           #specifies exposed ports, in this case 3021 if for debug (see launch.json)
+START_COMMAND=node --inspect=0.0.0.0:3021 ./app/index.js        #start command for docker-compose.yml. thats here for leaving git tracked docker-compose.yml untouched 
 VOLUME_SRC=/path/to/project/app                                 #to app folder in project
